# vfs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Grover_The_Agentic_File_System.md  README.md  coverage.json  demo_project.db  demo_users.db  grover-lookbook.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  test.yml
context/: README.md  constitution.md  open-questions.md
context/decisions/: README.md
context/learnings/: 2026-02-17-agent-memory-context.md  2026-02-17-ai-agent-filesystems.md  2026-02-17-database-vfs-patterns.md  2026-02-17-landscape-overview.md  2026-02-17-langchain-integration-analysis.md  2026-03-03-graph-memory-and-meeting-subgraph.md  2026-03-04-deepagents-analysis.md  2026-03-04-expansion-opportunities.md  2026-03-04-grover-baseline-v0.1-pin.md  2026-04-18-posix-and-related-standards.md  2026-04-18-spec-driven-development.md  2026-04-18-swe-agent-aci-principles.md  2026-04-19-filesystem-spec.md  2026-04-19-freebsd-vfs.md  2026-04-19-freebsd.md  2026-04-19-fsp-vfs-synthesis.md  2026-04-19-langchain.md  2026-04-19-langgraph.md  2026-04-19-language-server-protocol.md  2026-04-19-libfuse.md  2026-04-19-mcp-python-sdk.md  2026-04-19-mcp-specification.md  2026-04-19-plan9-and-plan9port.md  2026-04-19-scip.md  2026-04-19-unix-history.md  2026-04-20-graphify-and-lightrag.md  2026-04-20-pgvectorscale.md  2026-04-20-postgres-native-bm25.md  2026-04-22-mssql-native-meeting-subgraph.md  2026-04-23-letta.md  2026-04-23-openviking.md  2026-04-24-postgres-trigram-grep-vs-ripgrep.md  README.md
context/product/: brand.md  mission.md  roadmap.md
context/standards/: README.md  commits-and-prs.md  contributing.md  python-style.md  release.md  testing.md  tooling.md
context/stories/: README.md
context/stories/001-unify-vfs-result-and-optimize-queries/: implementation.md  spec.md  tasks.md
context/stories/002-posix-aligned-sidecar-namespace/: implementation.md  spec.md
context/stories/003-postgres-filesystem-with-native-vector-search/: implementation.md  spec.md
context/stories/004-postgres-native-meeting-subgraph/: implementation.md  query.sql  spec.md
context/stories/005-root-local-filesystem-host-paths/: spec.md
context/stories/006-postgres-native-bm25-via-pg-textsearch/: spec.md
context/stories/006-postgres-native-fts-lexical-search/: implementation.md  spec.md
context/stories/007-postgres-glob-grep-regex-scaling/: implementation.md  spec.md
context/stories/008-plan9-object-model-for-metadata-entries/: spec.md
context/stories/009-cloud-style-sharing-and-access-control/: spec.md
context/stories/010-align-primitives-vfsentry-and-candidate/: implementation.md  spec.md
context/stories/011-mssql-native-multi-hop-traversal/: spec.md
context/stories/012-mssql-freetexttable-lexical-search/: implementation.md  spec.md
context/stories/013-database-agnostic-code-trigram-index/: plan.md  research.md  spec.md
docker/mssql/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  init-db.sql
docs/: ai_agent_glob_grep_patterns.md  api.md  architecture.md  contributing.md  deepagents-integration.md  file_system_protocol_white_paper.md  fs_architecture.html  fs_architecture.md  grover_sudo_code.md  index.md
docs/internals/: fs.md
docs/plans/: code_review_findings.md  database_filesystem.md  directory_level_permissions.md  everything_is_a_file.md  grover_app.md  grover_filesystem_base_class.md  grover_implementation_plan.md  grover_proposal.md  grover_result_refactor.md  lazy_query_builder.md  reduce_delegation_boilerplate.md  rustwokx_graph.md  search_api_design.md  tool_code_execution.md  user_scoped_filesystem.md
examples/: cli_query_demo.py  demo_dbfs.py  main.py  postgres_backend_playground.ipynb  postgres_repo_glob_grep.ipynb  repo_postgres_cli_smoke.ipynb  story_001_demo.ipynb
grep_glob research/: README.md  benchmark.sql  build_chunk_table.py  chunk-table.sql  live_grep_to_sql.ipynb  load_repos.ipynb  pushdown_extract.py  repo-code-notes.md  schema.sql
research/: deepagents-analysis.md  expansion-opportunities.md  grover-baseline.md
scripts/: bench_bm25.py  bump_version.py  ci.sh  demo_content_gram_index.py  load_git_repos_chunks_postgres_vfs.py  load_repo_into_postgres_vfs.py  mssql_down.sh  mssql_test.sh  mssql_up.sh  postgres_repo_cli_probe.py  postgres_repo_cli_probe.sh  store_repo.py
src/grover/: __init__.py  _grover.py  _grover_async.py  base.py  client.py  databricks_store.py  embedding.py  events.py  grover.py  models.py  mount.py  paths.py  patterns.py  permissions.py  ref.py  results.py  routing.py  vector_store.py  versioning.py  worker.py
src/grover/analyzers/: python.py  (+1 more)
src/vfs/: __init__.py  base.py  bm25.py  client.py  columns.py  databricks_store.py  embedding.py  exceptions.py  models.py  paths.py  patterns.py  permissions.py  replace.py  results.py  routing.py  vector.py  versioning.py
src_new/grover/: models.py  protocol.py  results.py
tests/: conftest.py  test_analyzers.py  test_backend_projection.py  test_background_indexing.py  test_base.py  test_base_fs.py  test_bm25.py  test_capabilities.py  test_chunk_migration.py  test_cli_hydration.py  test_cli_projection.py  test_client.py  test_columns.py  test_compose.py  test_config.py  test_configurable_model.py  test_connection_service.py  test_connections.py  test_database.py  test_database_fs.py  test_database_fs_providers.py  test_database_graph.py  test_databricks_store.py  test_deepagents_backend.py  test_deepagents_middleware.py  test_dialect.py  test_directory_permissions.py  test_embedding.py  test_embedding_providers.py  test_events.py  test_external_edit.py  test_file_chunks.py  test_fs_types.py  test_fs_utils.py  test_graph.py  test_graph_algorithms.py  test_graph_filtering.py  test_graph_persistence.py  test_graph_protocols.py  test_graph_refresh.py  (+67 more)
tests_new/: test_results.py
vfs-app/: design-recommendation.md  index.html  oss-website-research.md  package.json
vfs-app/src/: App.tsx  index.css
vfs-brand/: README.md  package.json  tsconfig.json
vfs-brand/src/: App.tsx  index.html  server.ts  styles.css
(+187 files in other folders)
